--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,28 @@ html,
   gap: 5%;
 }
 
+/* HOME */
+.homeInnerContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2%;
+  padding-top: 3%;
+}
+.homeTextDiv {
+  margin: 0;
+  border-right: solid 1px black;
+  max-width: 30%;
+}
+.homeText {
+  font-size: large;
+}
+.homeImage {
+  width: 20%;
+  height: 20%;
+}
 /* NAVIGATION */
 .navContainer {
   margin: 0;
@@ -32,9 +54,28 @@ html,
   display: flex;
   justify-content: space-between;
 }
+.navContainer {
+  border-bottom: solid 1px black;
+  padding-bottom: 1%;
+}
 .navLink {
   margin-right: 20px;
+  font-size: large;
 }
-.navLink:last-child {
+.active-navLink {
+  margin-right: 20px;
+  font-size: large;
+  color: blue;
+}
+.navLink:visited,
+.headerNavLink:visited {
+  color: black;
+}
+.headerNavLink {
+  color: black;
+  text-decoration: none;
+}
+.navLink:last-child,
+.active-navLink:last-child {
   margin-right: 0;
 }
