--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@ html,
   font-family: "Garamond", "Courier New", "Times New Roman", "serif";
 }
 
+* {
+  box-sizing: border-box;
+}
+
 /* LANDING */
 .landingContainer {
   margin: 0;
@@ -16,10 +20,47 @@ html,
   display: grid;
   text-align: center;
   place-items: center;
-  gap: 5%;
+  /* gap: 5%; */
 }
 .landingSubtitle {
   text-decoration: italic;
+}
+
+/* ART */
+
+.artContainer {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.projectContainer {
+  width: 100%;
+  max-width: 40%;
+  margin: 0;
+}
+
+.projectDiv {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding-bottom: 3%;
+}
+
+.projectTextDiv {
+  flex: 1;
+  margin: 0;
+  font-size: large;
+}
+
+.projectImage {
+  width: 100%;
+  max-width: 40%;
+  height: auto;
 }
 
 /* HOME */
@@ -34,6 +75,7 @@ html,
 }
 .homeTextDiv {
   margin: 0;
+  padding-right: 2%;
   border-right: solid 1px black;
   max-width: 30%;
 }
@@ -57,6 +99,7 @@ html,
 .navContainer {
   margin: 0;
   padding: 0;
+  width: 100%;
   display: grid;
   text-align: center;
   place-items: center;
@@ -69,6 +112,9 @@ html,
 .navContainer {
   border-bottom: solid 1px black;
   padding-bottom: 1%;
+}
+.navBarDiv {
+  width: 100%;
 }
 .navLink {
   margin-right: 20px;
