--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@import "Home.css";
+@import "Art.css";
+@import "Sketchbook.css";
+
 /* DESKTOP (GENERAL) */
 body,
 html,
@@ -26,88 +30,6 @@ html,
   text-decoration: italic;
 }
 
-/* ART */
-
-.artContainer {
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.projectContainer {
-  width: 100%;
-  max-width: 40%;
-  padding-top: 3%;
-  margin: 0;
-  display: flex;
-  flex-direction: row;
-  gap: 2%;
-}
-
-.projectDiv {
-  border: solid 1.5px black;
-  padding-left: 2%;
-  padding-right: 2%;
-  display: flex;
-  align-items: left;
-  flex-direction: column;
-  width: 100%;
-}
-
-.projectImage {
-  width: 100%;
-  height: auto;
-  border: solid 1.5px black;
-  margin-bottom: 5%;
-}
-.projectText,
-.projectDesc {
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  line-height: 1em;
-}
-.projectDesc {
-  height: 3em;
-}
-
-/* HOME */
-.homeInnerContainer1 {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 2%;
-  padding-top: 3%;
-}
-.homeTextDiv {
-  margin: 0;
-  padding-right: 2%;
-  border-right: solid 1.5px black;
-  max-width: 30%;
-}
-.homeText {
-  font-size: large;
-}
-.homeImage {
-  width: 20%;
-  height: 20%;
-}
-.homeInnerContainer2 {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 2%;
-  padding-top: 3%;
-}
 /* NAVIGATION */
 .navContainer {
   margin: 0;
@@ -117,14 +39,12 @@ html,
   text-align: center;
   place-items: center;
   gap: 5%;
+  border-bottom: solid 1.5px black;
+  padding-bottom: 1%;
 }
 .navigation {
   display: flex;
   justify-content: space-between;
-}
-.navContainer {
-  border-bottom: solid 1.5px black;
-  padding-bottom: 1%;
 }
 .navBarDiv {
   width: 100%;
@@ -152,4 +72,11 @@ a:visited {
 .navLink:last-child,
 .active-navLink:last-child {
   margin-right: 0;
+}
+
+/* WIP */
+.wipDiv {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
