--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ html,
   margin: 0;
   padding: 0;
   height: 100%;
-  font-family: "Garamond", "Courier New", "Times New Roman", "serif";
+  font-family: "Garamond", "Times New Roman", "Courier New", "serif";
 }
 
 * {
