--- a/src/Art.css
+++ b/src/Art.css
@@ -11,18 +11,18 @@
 }
 .artTitle {
   width: 100%;
-  max-width: 60%;
+  max-width: 70%;
 }
 .projectContainer {
+  /* padding-top: 5%; */
   width: 100%;
-  max-width: 60%;
-  /* padding-top: 3%; */
-  margin: 0;
-  display: flex;
-  flex-direction: row;
-  gap: 2%;
+  max-width: 70%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+  gap: 10px;
+  padding-bottom: 5%;
 }
-
 .projectDiv {
   border: solid 1.5px black;
   padding-left: 2%;
@@ -50,4 +50,21 @@
 }
 .projectDesc {
   height: 3em;
+}
+
+@media screen and (max-width: 800px) {
+  .projectContainer {
+    /* padding-top: 5%; */
+    width: 100%;
+    max-width: 90%;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    justify-content: center;
+    gap: 10px;
+    padding-bottom: 5%;
+  }
+  .artTitle {
+    width: 100%;
+    max-width: 90%;
+  }
 }
