--- a/src/Home.css
+++ b/src/Home.css
@@ -14,12 +14,13 @@
   border-right: solid 1.5px black;
   max-width: 30%;
 }
+
 .homeText {
   font-size: large;
 }
 .homeImage {
-  width: 20%;
-  height: 20%;
+  width: 100%;
+  max-width: 30%;
 }
 .homeInnerContainer2 {
   width: 100%;
@@ -29,4 +30,29 @@
   justify-content: center;
   gap: 2%;
   padding-top: 3%;
+}
+
+@media screen and (max-width: 800px) {
+  .homeInnerContainer1 {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    flex-direction: column-reverse;
+    gap: 2%;
+    padding-top: 3%;
+    flex-direction: column;
+  }
+  .homeTextDiv {
+    margin: 0;
+    padding-right: 2%;
+    border: none;
+    max-width: 80%;
+  }
+  .homeImage {
+    width: 100%;
+    max-width: 50%;
+  }
 }
