--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import "Home.css";
 @import "Art.css";
 @import "Sketchbook.css";
+@import "Attention.css";
 
 /* DESKTOP (GENERAL) */
 body,
@@ -10,6 +11,7 @@ html,
   padding: 0;
   height: 100%;
   font-family: "Garamond", "Times New Roman", "Courier New", "serif";
+  /* background-color: antiquewhite; */
 }
 
 * {
