--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,18 @@ html,
   text-decoration: italic;
 }
 
+button {
+  cursor: pointer;
+  font: inherit;
+  background: white;
+  border: none;
+}
+
+button:hover {
+  color: gray;
+  text-decoration: underline;
+}
+
 /* NAVIGATION */
 .navContainer {
   margin: 0;
@@ -87,9 +99,9 @@ a:visited {
 /*SCROLLING */
 .scrolling-text {
   display: flex;
-  overflow: hidden; /* Hides the overflowing content */
-  white-space: nowrap; /* Ensures text does not wrap to the next line */
-  width: 100%; /* Ensures the container spans the full width of the screen */
+  overflow: hidden;
+  white-space: nowrap;
+  width: 100%;
   position: relative;
   font-size: 5rem;
   font-family: "Roboto", sans-serif;
@@ -97,40 +109,54 @@ a:visited {
 
 .scrolling-textB {
   display: flex;
-  overflow: hidden; /* Hides the overflowing content */
-  white-space: nowrap; /* Ensures text does not wrap to the next line */
-  width: 100%; /* Ensures the container spans the full width of the screen */
+  overflow: hidden;
+  white-space: nowrap;
+  width: 100%;
   position: relative;
-  /* font-size: 5rem; */
   font-family: "Roboto", sans-serif;
 }
 
 .scrolling-text-innerA {
-  display: inline-block; /* Keeps all text on one line */
-  animation: scrollA 5s linear infinite; /* Smooth scrolling animation */
+  display: inline-block;
+  animation: scrollA 5s linear infinite;
   color: red;
 }
 
 .scrolling-text-innerB {
-  display: inline-block; /* Keeps all text on one line */
-  animation: scrollB 5s linear infinite; /* Smooth scrolling animation */
+  display: inline-block;
+  animation: scrollB 5s linear infinite;
+  color: red;
+}
+
+.scrolling-text-innerC {
+  display: inline-block;
+  animation: scrollC 5s linear infinite;
   color: red;
 }
 
 @keyframes scrollA {
   from {
-    transform: translateX(0); /* Starts at the beginning */
+    transform: translateX(0);
   }
   to {
-    transform: translateX(-50%); /* Moves left by half its length to loop */
+    transform: translateX(-50%);
   }
 }
 
 @keyframes scrollB {
   from {
-    transform: translateX(-50%); /* Starts at the beginning */
+    transform: translateX(-50%);
   }
   to {
-    transform: translateX(0); /* Moves left by half its length to loop */
+    transform: translateX(0);
+  }
+}
+
+@keyframes scrollC {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-25%);
   }
 }
