--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -30,6 +30,7 @@
   justify-content: center;
   gap: 2%;
   padding-top: 3%;
+  padding-bottom: 3%;
 }
 
 @media screen and (max-width: 800px) {
@@ -54,5 +55,16 @@
   .homeImage {
     width: 100%;
     max-width: 50%;
+  }
+  .homeInnerContainer2 {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2%;
+    padding-top: 3%;
+    padding-bottom: 5%;
   }
 }
